tests/api/reference/negative/11-from-hex-odd.asm
const invalid: bytes = bytes.from_hex("abc")
